change cdn path to http://10.182.247.73/go-cdn-dev/

--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,16 @@
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="http://10.182.247.173/gos-cdn-dev/bootstrap/4.0.0-alpha.5/dist/css/bootstrap.min.css">
-    <link href="http://10.182.247.173/gos-cdn/node_modules/2.4.0/angular2-image-popup/directives/angular2-image-popup/css/style.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="http://10.182.247.173/gos-cdn/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="http://10.182.247.73/go-cdn-dev/bootstrap/4.0.0-alpha.5/dist/css/bootstrap.min.css">
+    <link href="http://10.182.247.73/go-cdn-dev/node_modules/2.4.0/angular2-image-popup/directives/angular2-image-popup/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="http://10.182.247.73/go-cdn-dev/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Polyfill(s) for older browsers -->
-    <script src="http://10.182.247.173/gos-cdn/node_modules/2.4.0/core-js/client/shim.min.js"></script>
+    <script src="http://10.182.247.73/go-cdn-dev/node_modules/2.4.0/core-js/client/shim.min.js"></script>
 
-    <script src="http://10.182.247.173/gos-cdn/node_modules/2.4.0/zone.js/dist/zone.js"></script>
-    <script src="http://10.182.247.173/gos-cdn/node_modules/2.4.0/systemjs/dist/system.src.js"></script>
+    <script src="http://10.182.247.73/go-cdn-dev/node_modules/2.4.0/zone.js/dist/zone.js"></script>
+    <script src="http://10.182.247.73/go-cdn-dev/node_modules/2.4.0/systemjs/dist/system.src.js"></script>
 
     <script src="systemjs.config.js"></script>
     <script>
@@ -25,7 +25,7 @@
   </head>
 
   <body><my-app>Please waiting for loading component.....</my-app></body>
-  <script src="http://10.182.247.173/gos-cdn/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="http://10.182.247.173/gos-cdn/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
-  <script src="http://10.182.247.173/gos-cdn/bootstrap/4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
+  <script src="http://10.182.247.73/go-cdn-dev/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="http://10.182.247.73/go-cdn-dev/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
+  <script src="http://10.182.247.73/go-cdn-dev/bootstrap/4.0.0-alpha.5/dist/js/bootstrap.min.js"></script>
 </html>
