add loading image and style

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
     <script src="http://10.182.247.73/go-cdn-dev/node_modules/4.0.0/zone.js/dist/zone.js"></script>
     <script src="http://10.182.247.73/go-cdn-dev/node_modules/4.0.0/systemjs/dist/system.src.js"></script>
-
+    
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <div><my-app>Please waiting for loading component.....</my-app><div>
+    <my-app><img class="loading-img" src="assets/200w_d.gif"></my-app>
   </body>
   <script src="http://10.182.247.73/go-cdn-dev/node_modules/4.0.0/jquery/dist/jquery.min.js"></script>
   <script src="http://10.182.247.73/go-cdn-dev/node_modules/4.0.0/tether/dist/js/tether.min.js"></script>
