--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,19 @@
     <base href="/">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/angular2-image-popup/directives/angular2-image-popup/css/style.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/themes/omega/theme.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/primeng/resources/primeng.min.css">
+    <link rel="stylesheet" type="text/css" href="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/angular2-image-popup/directives/angular2-image-popup/css/style.css">
+    <link rel="stylesheet" type="text/css" href="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/primeng/resources/themes/omega/theme.css">
+    <link rel="stylesheet" type="text/css" href="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/primeng/resources/primeng.min.css">
+    <link rel="stylesheet" href="node_modules/prismjs/themes/prism.css" />
     <link rel="stylesheet" href="styles.css">
 
     <!-- Polyfill(s) for older browsers -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
+    <script src="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/core-js/client/shim.min.js"></script>
 
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/zone.js/dist/zone.js"></script>
+    <script src="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/systemjs/dist/system.src.js"></script>
     
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
@@ -29,8 +30,8 @@
   <body>
     <my-app><img class="loading-img" src="assets/200w_d.gif"></my-app>
   </body>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/tether/dist/js/tether.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/jquery/dist/jquery.min.js"></script>
+  <script src="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/tether/dist/js/tether.min.js"></script>
+  <script src="http://dev-webcdn.cpall.co.th/node_modules/4.0.0/bootstrap/dist/js/bootstrap.min.js"></script>
   
 </html>
